Remove add-opens jvm args