@@ -1,7 +1,7 @@
 plugins {
     id 'bisq.java-library'
     id 'application'
-   /* id 'distribution'*/ //todo as long we dont need a jar we leave that out, speeds up build
+    /* id 'distribution'*/ //todo as long we dont need a jar we leave that out, speeds up build
     alias(libs.plugins.openjfx)
     alias(libs.plugins.jpackage)
     alias(libs.plugins.shadow)
@@ -11,9 +11,7 @@ apply from: '../buildSrc/bisq-version.gradle'
 
 application {
     project.mainClassName = 'bisq.desktopapp.Main'
-    applicationDefaultJvmArgs = ['--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
-                                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
-                                 '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED']
+    applicationDefaultJvmArgs = []
 }
 
 run {
@@ -102,7 +100,7 @@ tasks.jpackage {
     verbose = false
 //    arguments = --arguments <main class arguments>
     destination = "$buildDir/$distsDirName"
-    input  = "$buildDir/$libsDirName"
+    input = "$buildDir/$libsDirName"
     licenseFile = "../LICENSE"
 //    resourceDir = --resource-dir <resource dir path> // TODO
     runtimeImage = System.getProperty("java.home")
@@ -150,11 +148,7 @@ tasks.jpackage {
 
     additionalParameters = ['--verbose']
 
-    javaOptions = [
-            '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
-            '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
-            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
-    ]
+    javaOptions = []
 
     doFirst() {
         jpackageTempDir.mkdirs()
